fixed screenredord dropdown and spacing on labels in qs

--- a/ags/scss/widgets/quicksettings.scss
+++ b/ags/scss/widgets/quicksettings.scss
@@ -319,5 +319,13 @@ window#quicksettings .window-content {
             }
         }
     }
+
+    .theme-toggle-icon {
+        padding-right: $spacing;
+    }
+
+    .screen-record-toggle-label {
+        padding-left: $spacing / 2;
+    }
 }
  
